check_output_unit.txt
C:\Users\mooya\develop\test\src\Unit.js:1704
tryBuildStructure(time) {
                        ^

SyntaxError: Unexpected token '{'
    at checkSyntax (node:internal/main/check_syntax:74:5)

Node.js v22.21.1
